- Visual improvements - Bug fixed: softlock on decks on mobile

--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -151,6 +151,7 @@
 #study-content {
     position: relative;
     background-color: var(--secondary);
+    padding-left: 0 !important;
 }
 
 #study {
