--- a/frontend/src/styles/landing.css
+++ b/frontend/src/styles/landing.css
@@ -60,7 +60,8 @@
     --accent-950: #130607;
 }
 
-#landing {
+#landing-page {
+    
     display: grid;
     place-items: center;
     width: 100vw;
@@ -107,6 +108,7 @@
     background-color: var(--background-100);
     color: var(--background);
     height: 80dvh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
